fix: footer link spacing

--- a/src/base.scss
+++ b/src/base.scss
@@ -35,7 +35,7 @@ $breakpoint-large: 980px;
   &_link {
     text-decoration: none;
     color: white;
-    padding: 0.6rem;
+    padding: 0.6rem 0;
 
     &:hover {
       background-color: color.adjust($light-black, $whiteness: 30%);
